--- a/style.css
+++ b/style.css
@@ -53,3 +53,23 @@
   label {
     display: block;
   }
+ 
+  form {
+    background-color:#adadad;
+    text-align: center;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+  }
+  label {
+    color:rgb(255, 255, 255);
+    text-shadow: 2px 2px 10px #000000;
+    padding-top: 2%;
+  }
+  input {
+    border-radius: 25px;
+    padding-bottom: 1%;
+    width:70%;
+  }
