--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
   ul {
     list-style-type: none;
     padding:0%;
+    margin:0;
   }
   table {
     width:100%;
@@ -111,4 +112,58 @@
 }
 li {
   border-bottom:#000000 solid 2px;
+}
+.maingrid {
+  display:grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto;
+  gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+.topgrid {
+  
+  grid-column-start: 1;
+  grid-column-end: 5;
+}
+.leftgrid{
+  grid-template-columns: auto;
+}
+.rightgrid {
+  display: grid;
+  padding: 0%;
+  grid-column-start:2;
+  grid-column-end: 5;
+  grid-template-columns: auto auto auto;
+}
+.maingrid > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+.leftin{
+  padding-bottom:0;
+}
+p {
+  margin: 0;
+  }
+.check{
+  width:4%;
+}
+h1{
+  margin:0;
+}
+.inp {width:50%;}
+.top {
+  padding-left:8%;
+  display: inline-block;
+}
+.childgrid{
+  display: grid;
+  grid-template-rows: auto auto;
+  border:solid #2196F3 8px;
+}
+.childchildgrid{
+  border:solid #2196F3 8px;
 }
