--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ a {text-decoration: none;}
 .home-item {
   position: absolute;
   top: 123px;
-  left: 1155px;
+  left: 62%;
   border-radius: 50%;
   background-color: var(--color-aliceblue);
   width: 243px;
@@ -44,11 +44,11 @@ a {text-decoration: none;}
 }
 .home-item {
   top: 377px;
-  left: 548px;
+  left: 29.5%;
   border-radius: 2px;
   background-color: var(--primary);
-  width: 208px;
-  height: 47px;
+  width: 15%;
+  height: 2.5%;
 }
 .hi-i-am {
   margin: 0;
@@ -56,19 +56,19 @@ a {text-decoration: none;}
 .amet-minim-mollit,
 .hi-i-am-container {
   position: absolute;
-  left: 548px;
+  left: 29.5%;
   display: inline-block;
 }
 .hi-i-am-container {
   top: 128px;
   font-size: 44px;
   line-height: 60px;
-  width: 506px;
+  width: 30%;
   height: 105px;
 }
 .amet-minim-mollit {
   top: 273px;
-  width: 497px;
+  width: 30.5%;
   height: 66px;
 }
 .download-resume {
@@ -77,7 +77,7 @@ a {text-decoration: none;}
   font-weight: 500;
   display: inline-block;
   top: 386px;
-  left: 568px;
+  left: 30%;
   color: var(--color-white);
   width: 167px;
   height: 21px;
@@ -85,7 +85,7 @@ a {text-decoration: none;}
 .home-inner {
   position: absolute;
   top: 110px;
-  left: 1160px;
+  left: 62%;
   border-radius: 50%;
   width: 243px;
   height: 243px;
@@ -94,9 +94,9 @@ a {text-decoration: none;}
 .rectangle-div {
   position: absolute;
   top: 495px;
-  left: 400px;
+  left: 22%;
   background-color: var(--color-aliceblue);
-  width: 1152px;
+  width: 61%;
   height: 396px;
 }
 .home-child1,
@@ -105,15 +105,15 @@ a {text-decoration: none;}
   top: 564px;
   border-radius: var(--br-9xs);
   background-color: var(--color-white);
-  width: 418px;
+  width: 22%;
   height: 295px;
 }
 .home-child1 {
-  left: 548px;
+  left: 29.5%;
   box-shadow: 0 4px 10px rgba(187, 225, 250, 0.25);
 }
 .home-child2 {
-  left: 986px;
+  left: 53%;
 }
 .creating-pixel-perfect,
 .design-pattern,
@@ -121,86 +121,86 @@ a {text-decoration: none;}
 .making-a-design {
   position: absolute;
   top: 588px;
-  left: 571px;
+  left: 30%;
   font-size: var(--font-size-7xl);
   display: inline-block;
-  width: 374px;
+  width: 20%;
   height: 85px;
 }
 .creating-pixel-perfect,
 .design-pattern,
 .figma-icon-design {
-  left: 1009px;
+  left: 53.5%;
 }
 .design-pattern,
 .figma-icon-design {
-  top: 690px;
-  left: 727px;
+  top: 680px;
+  left: 38.5%;
   font-size: var(--font-size-lg);
   width: 239px;
   height: 34px;
 }
 .figma-icon-design {
-  left: 1165px;
+  left: 62%;
 }
 .home-child3,
 .vector-icon {
   position: absolute;
-  top: 693px;
-  left: 700.5px;
+  top: 680px;
+  left: 37.5%;
   width: 1px;
   height: 21px;
 }
 .home-child3 {
   top: 691px;
-  left: 1139.5px;
+  left: 61%;
 }
 .feb-2020,
 .feb-20201 {
   position: absolute;
-  top: 690px;
-  left: 571px;
+  top: 680px;
+  left: 30%;
   font-size: var(--font-size-lg);
   display: inline-block;
   width: 374px;
   height: 34px;
 }
 .feb-20201 {
-  left: 1009px;
+  left: 53.5%;
 }
 .amet-minim-mollit1,
 .amet-minim-mollit2 {
   position: absolute;
-  top: 735px;
-  left: 571px;
+  top: 710px;
+  left: 30%;
   display: inline-block;
-  width: 368px;
+  width: 20%;
   height: 117px;
 }
 .amet-minim-mollit2 {
-  left: 1009px;
+  left: 53.5%;
 }
 .recent-posts {
   position: absolute;
   top: 502px;
-  left: 548px;
+  left: 29.5%;
   font-size: var(--font-size-3xl);
   line-height: 60px;
 }
 .view-all {
   position: absolute;
   top: 522px;
-  left: 1196px;
+  left: 71.5%;
   color: var(--secondry);
   text-align: right;
   display: inline-block;
-  width: 208px;
+  width: 120x;
   height: 20px;
 }
 .featured-works {
   position: absolute;
   top: 906px;
-  left: 548px;
+  left: 29.5%;
   font-size: var(--font-size-3xl);
   line-height: 60px;
 }
@@ -220,34 +220,35 @@ a {text-decoration: none;}
 .linkedin-icon {
   position: absolute;
   top: calc(0% - 40px);
-  left: calc(51% - 117px);
+  left: calc(51.5% - 117px);
   width: 30px;
   height: 30px;
 }
 .group-icon,
 .insta-icon,
 .linkedin-icon {
-  left: calc(51% + 85px);
+  left: calc(51.5% + 85px);
 }
 .group-icon,
 .insta-icon {
-  left: calc(51% + 13px);
+  left: calc(51.5% + 13px);
   width: 36.92px;
 }
 .insta-icon {
-  left: calc(51% - 52px);
+  left: calc(51.5% - 52px);
   width: 30px;
 }
 .copyright-2020-all {
   position: absolute;
   top: calc(0% + 16px);
-  left: 41.5%;
+  left: 36%;
+  width:30%;
 }
 .footer {
   position: absolute;
   top: 1759px;
-  left: 400px;
-  width: 1152px;
+  left: 25%;
+  width: 50%;
   height: 182px;
   text-align: center;
   font-size: var(--font-size-sm);
@@ -257,7 +258,7 @@ a {text-decoration: none;}
 .vibrant-portraits-of {
   position: absolute;
   top: 977px;
-  left: 810px;
+  left: 43.5%;
   font-size: var(--font-size-11xl);
 }
 .days-of-malayalam,
@@ -272,7 +273,7 @@ a {text-decoration: none;}
 .typography {
   position: absolute;
   top: 1037px;
-  left: 898px;
+  left: 50%;
   font-size: var(--font-size-xl);
   color: var(--light);
   display: inline-block;
@@ -291,9 +292,9 @@ a {text-decoration: none;}
 .amet-minim-mollit5 {
   position: absolute;
   top: 1088px;
-  left: 810px;
+  left: 43.5%;
   display: inline-block;
-  width: 594px;
+  width: 38%;
   height: 93px;
 }
 .amet-minim-mollit4,
@@ -302,7 +303,7 @@ a {text-decoration: none;}
 }
 .amet-minim-mollit5 {
   top: 1579px;
-  left: 813px;
+  left: 43%;
   width: 507px;
 }
 .home-child4,
@@ -310,7 +311,7 @@ a {text-decoration: none;}
 .home-child6 {
   position: absolute;
   top: 1041px;
-  left: 810px;
+  left: 43.5%;
   border-radius: var(--br-base);
   background-color: var(--color-darkslateblue);
   width: 62px;
@@ -328,7 +329,7 @@ a {text-decoration: none;}
 .div2 {
   position: absolute;
   top: 1023px;
-  left: 820px;
+  left: 44.1%;
   font-size: var(--font-size-lg);
   line-height: 60px;
   font-weight: 900;
@@ -362,9 +363,9 @@ a {text-decoration: none;}
 .rectangle-icon {
   position: absolute;
   top: 988px;
-  left: 546px;
+  left: 29.5%;
   border-radius: var(--br-7xs);
-  width: 246px;
+  width: 13%;
   height: 180px;
   object-fit: cover;
 }
