--- a/index.css
+++ b/index.css
@@ -43,6 +43,7 @@ a {text-decoration: none;}
   height: 243px;
 }
 .home-item {
+  max-width:183px;
   top: 377px;
   left: 29.5%;
   border-radius: 2px;
