--- a/index.css
+++ b/index.css
@@ -1,49 +1,45 @@
-body {
-  margin: 0;
-  line-height: normal;
-}
-a {text-decoration: none;}
-:root {
-  /* fonts */
-  --font-heebo: Heebo;
-
-  /* font sizes */
-  --font-size-lg: 18px;
-  --font-size-base: 16px;
-  --font-size-xl: 20px;
-  --font-size-11xl: 30px;
-  --font-size-sm: 14px;
-  --font-size-3xl: 22px;
-  --font-size-7xl: 26px;
-
-  /* Colors */
-  --color-white: #fff;
-  --color-darkslateblue: #142850;
-  --dark-color: #21243d;
-  --light: #8695a4;
-  --secondry: #00a8cc;
-  --color-aliceblue: #edf7fa;
-  --color-black: #000;
-  --primary: #ff6464;
-
-  /* Border radiuses */
-  --br-7xs: 6px;
-  --br-base: 16px;
-  --br-9xs: 4px;
-}
-
-.home-child,
+@media only screen and (min-width: 600px) {
+  body {
+    margin: 0;
+    line-height: normal;
+  }
+  a {text-decoration: none;}
+  :root {
+    /* fonts */
+    --font-heebo: Heebo;
+  
+    /* font sizes */
+    --font-size-sm: 14px;
+    --font-size-base: 16px;
+    --font-size-5xl: 24px;
+    --font-size-lg: 18px;
+    --font-size-3xl: 22px;
+  
+    /* Colors */
+    --color-white: #fff;
+    --dark: #21243d;
+    --color-darkslateblue: #142850;
+    --light: #8695a4;
+    --primary: #ff6464;
+  
+    /* Border radiuses */
+    --br-base: 16px;
+    --br-7xs: 6px;
+    --br-9xs: 4px;
+  }
+  .home-child,
 .home-item {
   position: absolute;
   top: 123px;
-  left: 62%;
+  left: 40%;
   border-radius: 50%;
   background-color: var(--color-aliceblue);
+  width:30%;
   width: 243px;
   height: 243px;
 }
 .home-item {
-  top: 377px;
+  top: 577px;
   left: 29.5%;
   border-radius: 2px;
   background: #3acae3;
@@ -72,19 +68,21 @@ a {text-decoration: none;}
 .amet-minim-mollit,
 .hi-i-am-container {
   position: absolute;
-  left: 29.5%;
+  left: 17%;
   display: inline-block;
+  text-align: center;
 }
 .hi-i-am-container {
-  top: 128px;
-  font-size: 44px;
+  top: 350px;
+  font-size: 38px;
   line-height: 60px;
-  width: 30%;
+  width: 40%;
   height: 105px;
+  left:31%;
 }
 .amet-minim-mollit {
-  top: 273px;
-  width: 30.5%;
+  top: 477px;
+  width: 70%;
   height: 66px;
 }
 .download-resume {
@@ -94,7 +92,7 @@ a {text-decoration: none;}
   font-size: var(--font-size-xl);
   font-weight: 500;
   display: inline-block;
-  top: 386px;
+  top: 586px;
   left: 30%;
   color: var(--color-white);
   width: 167px;
@@ -103,10 +101,11 @@ a {text-decoration: none;}
 .home-inner {
   position: absolute;
   top: 110px;
-  left: 62%;
+  left: 39%;
   border-radius: 50%;
-  width: 243px;
-  height: 243px;
+  width:25%;
+  max-width: 243px;
+  max-height: 243px;
   object-fit: cover;
 }
 .rectangle-div {
@@ -422,4 +421,434 @@ a {text-decoration: none;}
   font-size: var(--font-size-base);
   color: var(--dark-color);
   font-family: var(--font-heebo);
+}
+}
+@media only screen and (min-width: 1200px) {
+  body {
+  margin: 0;
+  line-height: normal;
+}
+a {text-decoration: none;}
+:root {
+  /* fonts */
+  --font-heebo: Heebo;
+
+  /* font sizes */
+  --font-size-lg: 18px;
+  --font-size-base: 16px;
+  --font-size-xl: 20px;
+  --font-size-11xl: 30px;
+  --font-size-sm: 14px;
+  --font-size-3xl: 22px;
+  --font-size-7xl: 26px;
+
+  /* Colors */
+  --color-white: #fff;
+  --color-darkslateblue: #142850;
+  --dark-color: #21243d;
+  --light: #8695a4;
+  --secondry: #00a8cc;
+  --color-aliceblue: #edf7fa;
+  --color-black: #000;
+  --primary: #ff6464;
+
+  /* Border radiuses */
+  --br-7xs: 6px;
+  --br-base: 16px;
+  --br-9xs: 4px;
+}
+
+.home-child,
+.home-item {
+  position: absolute;
+  top: 123px;
+  left: 62%;
+  border-radius: 50%;
+  background-color: var(--color-aliceblue);
+  width: 243px;
+  height: 243px;
+}
+.home-item {
+  top: 377px;
+  left: 29.5%;
+  border-radius: 2px;
+  background: #3acae3;
+  border: 1px solid #1fbeda;
+  box-shadow: 0px 2px 0 #1fc1d6, 2px 4px 6px #24e0d0;
+  font-weight: 900;
+  letter-spacing: 1px;
+  transition: all 150ms linear;
+  width: 15%;
+  max-width: 183px;
+  height: 2.5%;
+  
+}
+.home-item.hovered {
+  background: #26cae0;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.2);
+  color: #7de4ec;
+  text-decoration: none;
+  text-shadow: -1px -1px 0 #1cb7c2;
+  transition: all 250ms linear;
+}
+.hi-i-am {
+  margin: 0;
+}
+.amet-minim-mollit,
+.hi-i-am-container {
+  position: absolute;
+  left: 29.5%;
+  display: inline-block;
+  text-align: left;
+}
+.hi-i-am-container {
+  top: 128px;
+  font-size: 44px;
+  line-height: 60px;
+  width: 30%;
+  height: 105px;
+}
+.amet-minim-mollit {
+  top: 273px;
+  width: 30.5%;
+  height: 66px;
+}
+.download-resume {
+  
+  pointer-events : auto;
+  position: absolute;
+  font-size: var(--font-size-xl);
+  font-weight: 500;
+  display: inline-block;
+  top: 386px;
+  left: 30%;
+  color: var(--color-white);
+  width: 167px;
+  height: 21px;
+}
+.home-inner {
+  position: absolute;
+  top: 110px;
+  left: 62%;
+  border-radius: 50%;
+  
+  max-width: 243px;
+  max-height: 243px;
+  object-fit: cover;
+}
+.rectangle-div {
+  position: absolute;
+  top: 495px;
+  left: 22%;
+  background-color: var(--color-aliceblue);
+  width: 61%;
+  height: 396px;
+}
+.home-child1,
+.home-child2 {
+  position: absolute;
+  top: 564px;
+  border-radius: var(--br-9xs);
+  background-color: var(--color-white);
+  width: 22%;
+  height: 295px;
+}
+.home-child1 {
+  left: 29.5%;
+  box-shadow: 0 4px 10px rgba(187, 225, 250, 0.25);
+}
+.home-child2 {
+  left: 53%;
+}
+.creating-pixel-perfect,
+.design-pattern,
+.figma-icon-design,
+.making-a-design {
+  position: absolute;
+  top: 588px;
+  left: 30%;
+  font-size: var(--font-size-7xl);
+  display: inline-block;
+  width: 20%;
+  height: 85px;
+}
+.creating-pixel-perfect,
+.design-pattern,
+.figma-icon-design {
+  left: 53.5%;
+}
+.design-pattern,
+.figma-icon-design {
+  top: 680px;
+  left: 38.5%;
+  font-size: var(--font-size-lg);
+  width: 239px;
+  height: 34px;
+}
+.figma-icon-design {
+  left: 62%;
+}
+.home-child3,
+.vector-icon {
+  position: absolute;
+  top: 680px;
+  left: 37.5%;
+  width: 1px;
+  height: 21px;
+}
+.home-child3 {
+  top: 691px;
+  left: 61%;
+}
+.feb-2020,
+.feb-20201 {
+  position: absolute;
+  top: 680px;
+  left: 30%;
+  font-size: var(--font-size-lg);
+  display: inline-block;
+  width: 374px;
+  height: 34px;
+}
+.feb-20201 {
+  left: 53.5%;
+}
+.amet-minim-mollit1,
+.amet-minim-mollit2 {
+  position: absolute;
+  top: 710px;
+  left: 30%;
+  display: inline-block;
+  width: 20%;
+  height: 117px;
+}
+.amet-minim-mollit2 {
+  left: 53.5%;
+}
+.recent-posts {
+  position: absolute;
+  top: 502px;
+  left: 29.5%;
+  font-size: var(--font-size-3xl);
+  line-height: 60px;
+}
+.view-all {
+  position: absolute;
+  top: 522px;
+  left: 71.5%;
+  color: var(--secondry);
+  text-align: right;
+  display: inline-block;
+  width: 120x;
+  height: 20px;
+}
+.view-all:hover{
+  text-decoration: underline;
+}
+.featured-works {
+  position: absolute;
+  top: 906px;
+  left: 29.5%;
+  font-size: var(--font-size-3xl);
+  line-height: 60px;
+}
+.footer-child {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: var(--color-white);
+}
+.fb-icon,
+.group-icon,
+.insta-icon,
+.linkedin-icon {
+  position: absolute;
+  top: calc(0% - 40px);
+  left: calc(51.5% - 117px);
+  width: 30px;
+  height: 30px;
+}
+.group-icon,
+.insta-icon,
+.linkedin-icon {
+  left: calc(51.5% + 85px);
+}
+.group-icon,
+.insta-icon {
+  left: calc(51.5% + 13px);
+  width: 36.92px;
+}
+.insta-icon {
+  left: calc(51.5% - 52px);
+  width: 30px;
+}
+.copyright-2020-all {
+  position: absolute;
+  top: calc(0% + 16px);
+  left: 36%;
+  width:30%;
+}
+.footer {
+  position: absolute;
+  top: 1759px;
+  left: 25%;
+  width: 50%;
+  height: 182px;
+  text-align: center;
+  font-size: var(--font-size-sm);
+}
+.days-of-malayalam,
+.designing-dashboards,
+.vibrant-portraits-of {
+  position: absolute;
+  top: 977px;
+  left: 43.5%;
+  font-size: var(--font-size-11xl);
+}
+.days-of-malayalam,
+.vibrant-portraits-of {
+  top: 1212px;
+}
+.days-of-malayalam {
+  top: 1460px;
+}
+.dashboard,
+.illustration,
+.typography {
+  position: absolute;
+  top: 1037px;
+  left: 50%;
+  font-size: var(--font-size-xl);
+  color: var(--light);
+  display: inline-block;
+  width: 374px;
+  height: 34px;
+}
+.illustration,
+.typography {
+  top: 1268px;
+}
+.typography {
+  top: 1513px;
+}
+.amet-minim-mollit3,
+.amet-minim-mollit4,
+.amet-minim-mollit5 {
+  position: absolute;
+  top: 1088px;
+  left: 43.5%;
+  display: inline-block;
+  width: 38%;
+  height: 93px;
+}
+.amet-minim-mollit4,
+.amet-minim-mollit5 {
+  top: 1319px;
+}
+.amet-minim-mollit5 {
+  top: 1579px;
+  left: 43%;
+  width: 507px;
+}
+.home-child4,
+.home-child5,
+.home-child6 {
+  position: absolute;
+  top: 1041px;
+  left: 43.5%;
+  border-radius: var(--br-base);
+  background-color: var(--color-darkslateblue);
+  width: 62px;
+  height: 25px;
+}
+.home-child5,
+.home-child6 {
+  top: 1272px;
+}
+.home-child6 {
+  top: 1517px;
+}
+.div,
+.div1,
+.div2 {
+  position: absolute;
+  top: 1023px;
+  left: 44.1%;
+  font-size: var(--font-size-lg);
+  line-height: 60px;
+  font-weight: 900;
+  color: var(--color-white);
+}
+.div1,
+.div2 {
+  top: 1254px;
+}
+.div2 {
+  top: 1499px;
+}
+.home-child7,
+.home-child8,
+.home-child9 {
+  position: absolute;
+  top: 1182.5px;
+  left: 46px;
+  width: 858px;
+  height: 1px;
+}
+.home-child8,
+.home-child9 {
+  top: 1428.5px;
+}
+.home-child9 {
+  top: 1675.5px;
+}
+.home-child10,
+.home-child11,
+.rectangle-icon {
+  position: absolute;
+  top: 988px;
+  left: 29.5%;
+  border-radius: var(--br-7xs);
+  width: 13%;
+  height: 180px;
+  object-fit: cover;
+}
+.home-child10,
+.home-child11 {
+  top: 1214px;
+}
+.home-child11 {
+  top: 1460px;
+  height: 184px;
+}
+.designing-dashboards:visited,
+.vibrant-portraits-of:visited,
+.days-of-malayalam:visited,
+.creating-pixel-perfect:visited,
+.making-a-design:visited{
+  color:#000;
+}
+.designing-dashboards:hover,
+.vibrant-portraits-of:hover,
+.days-of-malayalam:hover,
+.creating-pixel-perfect:hover,
+.making-a-design:hover{
+  color:#13b8dd;
+}
+.home {
+  position: relative;
+  background-color: var(--color-white);
+  width: 100%;
+  height: 1841px;
+  overflow: hidden;
+  text-align: left;
+  font-size: var(--font-size-base);
+  color: var(--dark-color);
+  font-family: var(--font-heebo);
+}
 }
