--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 360px) {
+  .topnav a {
+    width: 15%;
+    height: 40px;
+  }
   body {
     margin: 0;
     line-height: normal;
@@ -21,6 +25,7 @@
     --color-darkslateblue: #142850;
     --light: #8695a4;
     --primary: #ff6464;
+    --color-aliceblue: #edf7fa;
   
     /* Border radiuses */
     --br-base: 16px;
@@ -30,17 +35,19 @@
   .home-child,
 .home-item {
   position: absolute;
-  top: 123px;
-  left: 40%;
-  border-radius: 50%;
   background-color: var(--color-aliceblue);
-  width:30%;
-  width: 243px;
-  height: 243px;
+  top: 134px;
+  left: 28%;
+  border-radius: 50%;
+  width: 48%;
+  min-width: 200px;
+  min-height: 200px;
+  max-width: 243px;
+  max-height: 243px;
 }
 .home-item {
-  top: 577px;
-  left: 29.5%;
+  top: 620px;
+  left: 13.5%;
   border-radius: 2px;
   background: #3acae3;
   border: 1px solid #1fbeda;
@@ -48,8 +55,11 @@
   font-weight: 900;
   letter-spacing: 1px;
   transition: all 150ms linear;
-  width: 15%;
-  max-width: 183px;
+  min-width: auto;
+  min-height: auto;
+  max-height: auto;
+  width: 75%;
+  max-width: 300px;
   height: 2.5%;
   
 }
@@ -76,9 +86,9 @@
   top: 350px;
   font-size: 38px;
   line-height: 60px;
-  width: 40%;
+  width: 70%;
   height: 105px;
-  left:31%;
+  left:17%;
 }
 .amet-minim-mollit {
   top: 477px;
@@ -89,10 +99,10 @@
   
   pointer-events : auto;
   position: absolute;
-  font-size: var(--font-size-xl);
+  font-size: 20px;
   font-weight: 500;
   display: inline-block;
-  top: 586px;
+  top: 632px;
   left: 30%;
   color: var(--color-white);
   width: 167px;
@@ -101,64 +111,68 @@
 .home-inner {
   position: absolute;
   top: 110px;
-  left: 39%;
+  left: 28%;
   border-radius: 50%;
   width:25%;
+  min-width: 200px;
+  min-height: 200px;
   max-width: 243px;
   max-height: 243px;
   object-fit: cover;
 }
 .rectangle-div {
   position: absolute;
-  top: 495px;
-  left: 22%;
+  top: 740px;
+  left: 0%;
   background-color: var(--color-aliceblue);
-  width: 61%;
-  height: 396px;
+  width: 100%;
+  height: 700px;
 }
 .home-child1,
 .home-child2 {
   position: absolute;
-  top: 564px;
+  top: 785px;
   border-radius: var(--br-9xs);
   background-color: var(--color-white);
-  width: 22%;
+  width: 90%;
   height: 295px;
 }
 .home-child1 {
-  left: 29.5%;
+  left: 5%;
   box-shadow: 0 4px 10px rgba(187, 225, 250, 0.25);
 }
 .home-child2 {
-  left: 53%;
+  left: 5%;
+  top: 1100px;
 }
 .creating-pixel-perfect,
 .design-pattern,
 .figma-icon-design,
 .making-a-design {
   position: absolute;
-  top: 588px;
-  left: 30%;
+  top: 793px;
+  left: 9%;
   font-size: var(--font-size-7xl);
   display: inline-block;
-  width: 20%;
+  width: 80%;
   height: 85px;
 }
 .creating-pixel-perfect,
 .design-pattern,
 .figma-icon-design {
-  left: 53.5%;
+
+  top: 1107px;
 }
 .design-pattern,
 .figma-icon-design {
-  top: 680px;
-  left: 38.5%;
+  top: 831px;
+  left: 48%;
   font-size: var(--font-size-lg);
   width: 239px;
   height: 34px;
 }
 .figma-icon-design {
-  left: 62%;
+  top: 1145px;
 }
 .home-child3,
 .vector-icon {
@@ -175,32 +189,32 @@
 .feb-2020,
 .feb-20201 {
   position: absolute;
-  top: 680px;
-  left: 30%;
+  top: 831px;
+  left: 9%; 
   font-size: var(--font-size-lg);
   display: inline-block;
   width: 374px;
   height: 34px;
 }
 .feb-20201 {
-  left: 53.5%;
+  top:1145px;
 }
 .amet-minim-mollit1,
 .amet-minim-mollit2 {
   position: absolute;
-  top: 710px;
-  left: 30%;
+  top: 880px;
+  left: 9%;
   display: inline-block;
-  width: 20%;
+  width: 81%;
   height: 117px;
 }
 .amet-minim-mollit2 {
-  left: 53.5%;
+  top: 1194px;
 }
 .recent-posts {
   position: absolute;
-  top: 502px;
-  left: 29.5%;
+  top: 738px;
+  left: 35.5%;
   font-size: var(--font-size-3xl);
   line-height: 60px;
 }
@@ -213,14 +227,15 @@
   display: inline-block;
   width: 120x;
   height: 20px;
+  display: none;
 }
 .view-all:hover{
   text-decoration: underline;
 }
 .featured-works {
   position: absolute;
-  top: 906px;
-  left: 29.5%;
+  top: 1450px;
+  left: 14%;
   font-size: var(--font-size-3xl);
   line-height: 60px;
 }
@@ -239,7 +254,7 @@
 .insta-icon,
 .linkedin-icon {
   position: absolute;
-  top: calc(0% - 40px);
+  top: calc(159% - 40px);
   left: calc(51.5% - 117px);
   width: 30px;
   height: 30px;
@@ -260,9 +275,9 @@
 }
 .copyright-2020-all {
   position: absolute;
-  top: calc(0% + 16px);
-  left: 36%;
-  width:30%;
+  top: calc(155% + 16px);
+  left: -3%;
+  width: max-content;
 }
 .footer {
   position: absolute;
@@ -277,13 +292,14 @@
 .designing-dashboards,
 .vibrant-portraits-of {
   position: absolute;
-  top: 977px;
-  left: 43.5%;
-  font-size: var(--font-size-11xl);
+  top: 1762px;
+  left: 10%;
+  font-size: 21px;
 }
 .days-of-malayalam,
 .vibrant-portraits-of {
   top: 1212px;
+  display: none;
 }
 .days-of-malayalam {
   top: 1460px;
@@ -292,8 +308,8 @@
 .illustration,
 .typography {
   position: absolute;
-  top: 1037px;
-  left: 50%;
+  top: 1800px;
+  left: 30%;
   font-size: var(--font-size-xl);
   color: var(--light);
   display: inline-block;
@@ -302,6 +318,7 @@
 }
 .illustration,
 .typography {
+  display:none;
   top: 1268px;
 }
 .typography {
@@ -311,14 +328,15 @@
 .amet-minim-mollit4,
 .amet-minim-mollit5 {
   position: absolute;
-  top: 1088px;
-  left: 43.5%;
+  top: 1832px;
+  left: 10.5%;
   display: inline-block;
-  width: 38%;
+  width: 80%;
   height: 93px;
 }
 .amet-minim-mollit4,
 .amet-minim-mollit5 {
+  display: none;
   top: 1319px;
 }
 .amet-minim-mollit5 {
@@ -330,8 +348,8 @@
 .home-child5,
 .home-child6 {
   position: absolute;
-  top: 1041px;
-  left: 43.5%;
+  top: 1800px;
+  left: 9.5%;
   border-radius: var(--br-base);
   background-color: var(--color-darkslateblue);
   width: 62px;
@@ -340,6 +358,7 @@
 .home-child5,
 .home-child6 {
   top: 1272px;
+  display:none;
 }
 .home-child6 {
   top: 1517px;
@@ -348,8 +367,8 @@
 .div1,
 .div2 {
   position: absolute;
-  top: 1023px;
-  left: 44.1%;
+  top: 1785px;
+  left: 11.5%;
   font-size: var(--font-size-lg);
   line-height: 60px;
   font-weight: 900;
@@ -358,6 +377,7 @@
 .div1,
 .div2 {
   top: 1254px;
+  display:none;
 }
 .div2 {
   top: 1499px;
@@ -374,6 +394,7 @@
 .home-child8,
 .home-child9 {
   top: 1428.5px;
+  display:none;
 }
 .home-child9 {
   top: 1675.5px;
@@ -382,16 +403,17 @@
 .home-child11,
 .rectangle-icon {
   position: absolute;
-  top: 988px;
-  left: 29.5%;
+  top: 1510px;
+  left: 9%;
   border-radius: var(--br-7xs);
-  width: 13%;
-  height: 180px;
+  width: 83%;
+  height: 241px;
   object-fit: cover;
 }
 .home-child10,
 .home-child11 {
   top: 1214px;
+  display:none;
 }
 .home-child11 {
   top: 1460px;
@@ -415,7 +437,7 @@
   position: relative;
   background-color: var(--color-white);
   width: 100%;
-  height: 1841px;
+  height: 2100px;
   overflow: hidden;
   text-align: left;
   font-size: var(--font-size-base);
